v4.1.0: fix startup freeze and speed up first launch
- Run mod installation in background instead of blocking client startup

- Add local mod presence check to skip unnecessary network requests

- Add install progress screen for first-time setup

- Reduce memory usage in SHA-512 by streaming files instead of readAllBytes

- Limit downloader thread pool for lighter startup resource usage

- Improve splash with larger PavMC title and real progress support